--- a/style.css
+++ b/style.css
@@ -1,51 +1,39 @@
 body{
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #0b1522;
+    /* background: #6990f2; */
+    background-image: linear-gradient(
+        23deg,
+        hsl(49deg 100% 69%) 0%,
+        hsl(16deg 80% 61%) 2%,
+        hsl(330deg 81% 34%) 12%,
+        hsl(259deg 100% 15%) 50%,
+        hsl(212deg 100% 25%) 88%,
+        hsl(197deg 100% 30%) 98%);
+    
 }
-.heart{
-    height: 70px;
-    width: 70px;
-    background: #f20044;
+
+.container{
     position: relative;
-    transform: rotate(-45deg);
-    box-shadow: -10px 10px 90px #f20044;
-    animation: heart 0.6s linear infinite;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center
 }
-@keyframes heart{
-    0%{
-           transform: rotate(-45deg) scale(1.07);
-    }
-    80%{
-           transform: rotate(-45deg) scale(1.0);
-    }
-    100%{
-           transform: rotate(-45deg) scale(0.8);
-    }
-}
-.heart:before{
-    content: '';
-    position: absolute;
-    height: 70px;
-    width: 70px;
-    background: #f20044;
-    top: -50%;
-    border-radius: 50px;
-    box-shadow: -10px -10px 90px #f20044;
 
-}
-.heart:after{
-    content: '';
-    position: absolute;
-    height: 70px;
-    width: 70px;
-    background: #f20044;
-    right: -50%;
-    border-radius: 50px;
-    box-shadow: 10px 10px 90px #f20044;
 
+.box{
+    width: 600px;
+    height: 400px;
+    background-color: #fff;
+    position: relative;
+    border: 1px;
+    border-radius: 20px;
+    
+}
+.video{
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+     cursor: pointer;
+     border-radius: 20px;
 }
