--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    /* background: #6990f2; */
-    background-image: linear-gradient(
+    background: #6990f2;
+/*     background-image: linear-gradient(
         23deg,
         hsl(49deg 100% 69%) 0%,
         hsl(16deg 80% 61%) 2%,
@@ -9,7 +9,7 @@ body{
         hsl(212deg 100% 25%) 88%,
         hsl(197deg 100% 30%) 98%);
     
-}
+} */
 
 .container{
     position: relative;
