--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background: #6990f2;
-/*     background-image: linear-gradient(
+/*      background-image: linear-gradient(
         23deg,
         hsl(49deg 100% 69%) 0%,
         hsl(16deg 80% 61%) 2%,
@@ -8,8 +8,8 @@ body{
         hsl(259deg 100% 15%) 50%,
         hsl(212deg 100% 25%) 88%,
         hsl(197deg 100% 30%) 98%);
-    
-} */
+     */
+} 
 
 .container{
     position: relative;
