--- a/style.css
+++ b/style.css
@@ -1,39 +1,83 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Doto:wght@100..900&display=swap');
+
+
 body{
     background: #6990f2;
-/*      background-image: linear-gradient(
-        23deg,
-        hsl(49deg 100% 69%) 0%,
-        hsl(16deg 80% 61%) 2%,
-        hsl(330deg 81% 34%) 12%,
-        hsl(259deg 100% 15%) 50%,
-        hsl(212deg 100% 25%) 88%,
-        hsl(197deg 100% 30%) 98%);
-     */
-} 
+    font-family: Doto, sans-serif;
+    
+}
 
 .container{
-    position: relative;
+    /* position: relative; */
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
-    align-items: center
-}
+    align-items: center;
+}   
 
 
 .box{
     width: 600px;
     height: 400px;
-    background-color: #fff;
-    position: relative;
+    background-color: rebeccapurple;
     border: 1px;
     border-radius: 20px;
+    margin-top: 0;
     
 }
 .video{
+    
      width: 100%;
      height: 100%;
      object-fit: cover;
      cursor: pointer;
-     border-radius: 20px;
+     /* border-radius: 20px; */
+     
+    
 }
+.NavHeader{
+    /* padding: 10px 2%; */
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background: black ;
+    position: sticky;
+    top: 20px;
+    z-index: 10;
+   
+}
+
+h1, p{
+    text-align: center;
+    color: white;
+    letter-spacing: 5px;
+    font-size: 30px;
+}
+
+ h2  {
+    text-align: center;
+ }
+ #Para  {
+    border: 0.5em solid rgb(59, 218, 59);
+    margin-top: 0;
+    background: black;
+ }
+ p{
+    font: bolder;
+    
+ }
+ .dot{
+    display: flex;
+    justify-content: center;
+ }
+
+ @media screen and (max-width: 600px) {
+    h1, p {
+        font-size: 10px;
+        
+    }
+    .container{
+        height: 50vh;
+    }
+ }
